# ROMEO

./: CMakeLists.txt  README.txt  doxygen.conf
CMakeScripts/: FindROSETTA.cmake
data/: MET_prm.sh  PlannerGraph.txt  params.txt  planner.stats  planner.stats_extended  planner.stats_sol0  planner.stats_sol1  plannerGraph.txt  scene.txt
doc/: main.txt
doc/html/: Algebra2D_8hpp.html  Algebra2D_8hpp__dep__incl.map  Algebra2D_8hpp__dep__incl.md5  Algebra2D_8hpp__incl.map  Algebra2D_8hpp__incl.md5  Algebra2D_8hpp_source.html  Algebra3D_8hpp.html  Algebra3D_8hpp__incl.map  Algebra3D_8hpp__incl.md5  Algebra3D_8hpp_source.html  Algebra_8hpp.html  Algebra_8hpp__dep__incl.dot  Algebra_8hpp__dep__incl.md5  Algebra_8hpp__incl.map  Algebra_8hpp__incl.md5  Algebra_8hpp_source.html  Allocator_8hpp.html  Allocator_8hpp__dep__incl.map  Allocator_8hpp__dep__incl.md5  Allocator_8hpp_source.html  BinarySearch_8hpp.html  BinarySearch_8hpp__dep__incl.map  BinarySearch_8hpp__dep__incl.md5  BinarySearch_8hpp_source.html  CfgAcceptorBasedOnDistance_8hpp.html  CfgAcceptorBasedOnDistance_8hpp__dep__incl.map  CfgAcceptorBasedOnDistance_8hpp__dep__incl.md5  CfgAcceptorBasedOnDistance_8hpp__incl.map  CfgAcceptorBasedOnDistance_8hpp__incl.md5  CfgAcceptorBasedOnDistance_8hpp_source.html  CfgAcceptorBasedOnEnergy_8hpp.html  CfgAcceptorBasedOnEnergy_8hpp__incl.map  CfgAcceptorBasedOnEnergy_8hpp__incl.md5  CfgAcceptorBasedOnEnergy_8hpp_source.html  CfgAcceptorBasedOnFixedMMC_8hpp.html  CfgAcceptorBasedOnFixedMMC_8hpp__incl.map  CfgAcceptorBasedOnFixedMMC_8hpp__incl.md5  CfgAcceptorBasedOnFixedMMC_8hpp_source.html  CfgAcceptorBasedOnMMC_8hpp.html  CfgAcceptorBasedOnMMC_8hpp__incl.map  (+1810 more)
examples/: common_romeo_setup.sh
examples/2ezk_feltr/: 2ezk_feltr.sh
examples/cvn/: cvn_sprint.sh  score3NoRg.wts
examples/scripts/: energyAnalysis.py
src/Components/: Component.hpp
src/Components/CfgAcceptors/: CfgAcceptor.hpp  CfgAcceptorBasedOnDistance.hpp  CfgAcceptorBasedOnEnergy.hpp  CfgAcceptorBasedOnFixedMMC.hpp  CfgAcceptorBasedOnMMC.hpp
src/Components/CfgDistances/: CfgDistance.hpp  CfgDistanceLp.cpp  CfgDistanceLp.hpp  SignedDistanceBetweenTwoAngles.hpp  SignedDistanceBetweenTwoNumbers.hpp  SignedDistanceBetweenTwoValues.hpp
src/Components/CfgEnergyEvaluators/: CfgEnergyEvaluator.hpp
src/Components/CfgForwardKinematics/: CfgForwardKinematics.cpp  CfgForwardKinematics.hpp
src/Components/CfgImprovers/: CfgImprover.hpp  CfgImproverDoNothing.hpp
src/Components/CfgManagers/: Cfg.hpp  CfgManager.cpp  CfgManager.hpp
src/Components/CfgOffspringGenerators/: CfgOffspringGenerator.hpp  CfgOffspringGeneratorByGaussianPerturbation.cpp  CfgOffspringGeneratorByGaussianPerturbation.hpp  CfgOffspringGeneratorToTarget.hpp  CfgOffspringGeneratorToTargetByLinearInterpolation.cpp  CfgOffspringGeneratorToTargetByLinearInterpolation.hpp  CfgOffspringGeneratorTowardTarget.hpp
src/Components/CfgProjectors/: CfgProjector.hpp
src/Components/CfgSamplers/: CfgSampler.hpp  CfgUniformSamplerInJointSpace.cpp  CfgUniformSamplerInJointSpace.hpp
src/Components/EdgeCostEvaluators/: EdgeCostEvaluator.cpp  EdgeCostEvaluator.hpp  EdgeCostEvaluatorBasedOnDistance.hpp  EdgeCostEvaluatorBasedOnEnergy.cpp  EdgeCostEvaluatorBasedOnEnergy.hpp  EdgeCostEvaluatorBasedOnMW.cpp  EdgeCostEvaluatorBasedOnMW.hpp
src/Planners/: EST.cpp  EST.hpp  FELTR.cpp  FELTR.hpp  FELTRCell.cpp  FELTRCell.hpp  FELTRRegion.cpp  FELTRRegion.hpp  PGT.cpp  PGT.hpp  PRM.cpp  PRM.hpp  Planner.hpp  PlannerEdge.hpp  PlannerGraph.cpp  PlannerGraph.hpp  PlannerGraphSearchInfo.cpp  PlannerGraphSearchInfo.hpp  PlannerProblem.hpp  PlannerSolution.cpp  PlannerSolution.hpp  PlannerVertex.hpp  RRT.cpp  RRT.hpp  SamplingBasedPlanner.cpp  SamplingBasedPlanner.hpp  Sprint.cpp  Sprint.hpp  TreeSamplingBasedPlanner.cpp  TreeSamplingBasedPlanner.hpp
src/Plugin2D/: CfgAcceptorChain2D.cpp  CfgAcceptorChain2D.hpp  CfgAcceptorPoint2D.hpp  CfgProjectorChain2D.cpp  CfgProjectorChain2D.hpp  CfgProjectorPoint2D.hpp  CfgSamplerPoint2D.hpp  Chain2D.cpp  Chain2D.hpp  GManagerRunPlanner2D.cpp  GManagerRunPlanner2D.hpp  GManagerRunPlannerChain2D.hpp  GManagerRunPlannerPoint2D.hpp  Scene2D.cpp  Scene2D.hpp  Setup2D.hpp  SetupChain2D.cpp  SetupChain2D.hpp  SetupPoint2D.cpp  SetupPoint2D.hpp
src/PluginRosetta/: CfgDistanceAtomRMSD.cpp  CfgDistanceAtomRMSD.hpp  CfgEnergyEvaluatorRosetta.cpp  CfgEnergyEvaluatorRosetta.hpp  CfgImproverRosetta.cpp  CfgImproverRosetta.hpp  CfgOffspringGeneratorRosetta.cpp  CfgOffspringGeneratorRosetta.hpp  CfgOffspringGeneratorRosettaWBias.cpp  CfgOffspringGeneratorRosettaWBias.hpp  CfgProjectorDeltaR.cpp  CfgProjectorDeltaR.hpp  CfgProjectorUSR.cpp  CfgProjectorUSR.hpp  CfgProjectorUSREnergy.cpp  CfgProjectorUSREnergy.hpp  CfgSamplerRosetta.cpp  CfgSamplerRosetta.hpp  Feltr4D.hpp  MolecularStructureRosetta.cpp  MolecularStructureRosetta.hpp  SetupRosetta.cpp  SetupRosetta.hpp  USRFactory.cpp  USRFactory.hpp
src/Programs/: GManagerRunPlanner.cpp  GManagerRunPlanner.hpp  GRunPlanner.cpp  ROMEO.cpp  RunPlanner.cpp  Runner.cpp  TestSetup.cpp
src/RosettaTools/: MakePDBsFromSolution.cpp
src/Setup/: Defaults.hpp  Setup.cpp  Setup.hpp
src/Utils/: Algebra.cpp  Algebra.hpp  Algebra2D.hpp  Algebra3D.cpp  Algebra3D.hpp  Allocator.hpp  BinarySearch.hpp  Constants.hpp  DLHandler.cpp  DLHandler.hpp  Definitions.hpp  DisjointSet.cpp  DisjointSet.hpp  Flags.hpp  GCamera.cpp  GCamera.hpp  GDraw.cpp  GDraw.hpp  GManager.cpp  GManager.hpp  Geometry.cpp  Geometry.hpp  GraphSearch.hpp  Grid.cpp  Grid.hpp  HashFn.cpp  HashFn.hpp  Heap.hpp  Logger.cpp  Logger.hpp  Misc.hpp  Object.hpp  Params.cpp  Params.hpp  Proximity.hpp  ProximityBruteForce.hpp  ProximityDefault.hpp  ProximityGNAT.hpp  ProximityQuery.hpp  ProximityResults.hpp  (+12 more)
